--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,5 +1,5 @@
 body {
-  background-image: linear-gradient(to bottom, #386d37, #262626);
+  background-color: #386d37;
 }
 
 html {
@@ -33,7 +33,6 @@ html {
 
 .columnsContainer {
   display: flex;
-  flex-direction: column;
   flex-direction: row;
   justify-content: center;
   align-items: center;
@@ -49,9 +48,13 @@ html {
 
 .heading {
   display: flex;
-  justify-content: center;
   opacity: 0; /* Initially hide the heading */
   animation: slideIn 1s forwards; /* Animate the heading in */
+  width: 81%;
+}
+
+.heading h1 {
+  width: 100%;
 }
 
 .rightColumn {
@@ -112,7 +115,7 @@ html {
 }
 
 .welcomeText {
-  width: 80%;
+  width: 81%;
   font-family: 'Inter', sans-serif;
   color: #caf3ce;
   font-size: 2rem;
@@ -148,15 +151,56 @@ html {
   }
 }
 
-/* @media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
+@media (max-width: 1300px) {
+  .heading h1 {
+    font-size: 2.75rem;
+    text-align: center;
   }
 
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
+  .welcomeText {
+    font-size: 1.5rem;
   }
-} */
+
+  .myButton {
+    font-size: 1.5rem;
+    margin: 0.5rem 0.5rem;
+  }
+
+  .buttonsContanier {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .columnsContainer {
+    flex-direction: column;
+  }
+
+  .profileImage {
+    height: 15rem;
+    width: 15rem;
+    justify-self: center;
+    margin-left: 0;
+  }
+}
+
+@media (min-width: 1301px) and (max-width: 1919px) {
+  .heading h1 {
+    font-size: 5rem;
+    text-align: center;
+  }
+
+  .myButton {
+    font-size: 2rem;
+    margin: 0.5rem 0.5rem;
+  }
+
+  .buttonsContanier {
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .welcomeText {
+    font-size: 2rem;
+  }
+}
